Meeting assignment requirements

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <title> Owen Sarah | WDD 130 </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Sarah Ekpo Owen | WDD 130 </title>
 </head>
 
 <body>
@@ -15,12 +15,12 @@
         </nav>
     </header>
     <main>
-        <h1> Owen Sarah | WDD 130 </h1>
-        <img src="images/profile.webp" alt="Hello, my name is Owen Sarah" width="200">
-        <p> Hello! My name is Owen Sarah and I am from Lagos, Nigeria </p>
+        <h1> Sarah Ekpo Owen | WDD 130 </h1>
+        <img src="images/profile.webp" alt="Hello, my name is Sarah Ekpo Owen" width="200">
+        <p> Hello! My name is Sarah Ekpo Owen and I am from Lagos, Nigeria </p>
     </main>
     <footer>
-        <p> &copy;2025 ❤ Owen Sarah ❤ Nigeria. </p>
+        <p> &copy;2025 ❤ Sarah Ekpo Owen ❤ Nigeria. </p>
     </footer>
 </body>
 
