--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -12,17 +12,23 @@
             <h1>A Holy Grail Layout Example</h1>
         </header>
         <nav>
-            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church of Jesus Christ</a></li>
-            <li><a href="https://www.byupathway.edu/">BYU Pathway Worldwide</a></li>
+            <ul>
+                <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church of Jesus Christ</a></li>
+                <li><a href="https://www.byupathway.edu/">BYU Pathway Worldwide</a></li>
+            </ul>
         </nav>
         <main>
             <section>
                 <h2>Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, hic!</p>
+            </section>
+            <section>
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, hic!</p>
+            </section>
                 <aside>
                     <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/320x200/aba-nigeria-temple-lds-273999-wallpaper.jpg" alt="Aba Nigerian Temple" width="200">
                 </aside>
-            </section>
         </main>
         <footer>
             <p>Sarah Ekpo Owen</p>
