Spelling phillippians correctly

--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -15,7 +15,7 @@
 			<p>12 I know both how to be abased, and I know how to abound: every where and in all things I am instructed both to be full and to be hungry, both to abound and to suffer need.</p>
 			<p>13 I can do all things through Christ which strengtheneth me.</p>
 		</blockquote>
-		<cite>Phillipians 4:11-13</cite>
+		<cite>Phillippians 4:11-13</cite>
 		<p></p>
 	</div>
 </main>
