Home page enhancement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Describe your home page using keywords like your name, the purpose of the page.">
+    <meta name="author" content="Your name">
     <title>Sarah Ekpo Owen | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -20,6 +22,15 @@
         <img src="images/profile.webp" alt="Hello, my name is Sarah Ekpo Owen" width="200">
         <p> Hello! My name is Sarah Ekpo Owen and I am from Lagos, Nigeria </p>
     </main>
+    <aside>
+        <h2>Nigeria</h2>
+        <img scr="images/nigeria.jpg" alt="Nigeria landscape">
+        <p>Nigeria, the most populous country in Africa, is a vibrant nation known for its diverse cultures, languages, and religions. 
+            Located in West Africa, it boasts a rich history, having gained independence from British rule in 1960. 
+            Nigeria is a federation of 36 states and the Federal Capital Territory, with a dynamic economy driven by oil production and a growing non-oil sector. 
+            The country faces numerous challenges, including security threats like insurgency and banditry, as well as economic and social inequalities. 
+            Despite these challenges, Nigeria remains a key player in Africa, with significant economic and political influence. </p>
+    </aside>
     <footer>
         <p> &copy;2025 ❤ Sarah Ekpo Owen ❤ Nigeria. </p>
     </footer>
