--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Describe your home page using keywords like your name, the purpose of the page.">
-    <meta name="author" content="Your name">
+    <meta name="description" content="Sarah Ekpo Owen's BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Sarah Ekpo Owen">
     <title>Sarah Ekpo Owen | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
