SRC instead of SCR

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <aside>
         <h2>Nigeria</h2>
-        <img scr="images/nigeria.jpg" alt="Nigeria landscape">
+        <img src="images/nigeria.jpg" alt="Nigeria landscape">
         <p>Nigeria, the most populous country in Africa, is a vibrant nation known for its diverse cultures, languages, and religions. 
             Located in West Africa, it boasts a rich history, having gained independence from British rule in 1960. 
             Nigeria is a federation of 36 states and the Federal Capital Territory, with a dynamic economy driven by oil production and a growing non-oil sector. 
