--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@ about.html
     <meta name="description"
         content="This About Us page provides information on contacts, history, and promotions for our rafting site.">
     <meta name="author" content="Sarah Owen">
-    <link href="styles/rafting.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
