--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@ about.html
 
 <body>
     <header>
-        <img src="images/skelletons.jpg" alt="Rafting Site Logo">
+        <img src="images/Rafting1.jpg" alt="Rafting Site Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -24,10 +24,10 @@ about.html
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero 1.jpg" alt="Hero background image" width="200">
+            <img src="images/Rafting2.jpg" alt="Hero background image" width="200">
             <h1>WHITE WATER RAFTING</h1>
             <article>
-                <img src="images/happy1.jpg" alt="Happy Client">
+                <img src="images/Rafting3.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -44,7 +44,7 @@ about.html
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="images/history_pic.jpg" alt="History Image">
+                <img src="images/Rafting4.jpg" alt="History Image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -56,23 +56,23 @@ about.html
             <h2>ADVENTURE AWAITS YOU!</h2>
             <div class="fig-images">
                 <figure>
-                    <img src="images/img1_rafting22_600.jpg" alt="White Water Adventure">
+                    <img src="images/Rafting1.jpg" alt="White Water Adventure">
                     <figcaption>Preparation</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/img2_rafting20_600.jpg" alt="White Water Adventure">
+                    <img src="images/Rafting2.jpg" alt="White Water Adventure">
                     <figcaption>Journey Begin</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/img3_rafting5_1024.jpg" alt="White Water Adventure">
+                    <img src="images/Rafting3.jpg" alt="White Water Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/img4_rafting9_600.jpg" alt="White Water Adventure">
+                    <img src="images/Rafting4.jpg" alt="White Water Adventure">
                     <figcaption>Rolling Rapids</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rapid 1.jpg" alt="White Water Adventure">
+                    <img src="images/Rafting5.jpg" alt="White Water Adventure">
                     <figcaption>wind</figcaption>
                 </figure>
             </div>
@@ -81,12 +81,12 @@ about.html
     <footer>
         <p>©2025 <a href="about.html">White Water Rafting</a> Sarah Owen </p>
         <nav class="sociallinks">
-            <a href="https://facebook.com" target="_blank"><img src="images/facebook-600.png"
-                    alt="Facebook icon by Icons8.com"></a>
-            <a href="https://twitter.com" target="_blank"><img src="images/twitterx-600.png"
-                    alt="Twitter(X) icon by Icons8.com"></a>
-            <a href="https://linkedin.com" target="_blank"><img src="images/linkedin-600.png"
-                    alt="LinkedIn icon by Icons8.com"></a>
+            <a href="https://facebook.com" target="_blank"><img src="images/Facebook icon.png"
+                    alt="Facebook icon"></a>
+            <a href="https://twitter.com" target="_blank"><img src="images/Twitter icon.png"
+                    alt="Twitter(X) icon"></a>
+            <a href="https://instagram.com" target="_blank"><img src="images/Instagram icon.jpg"
+                    alt="LinkedIn icon"></a>
         </nav>
     </footer>
 </body>
