putting the pictures in the right folder

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,7 +27,7 @@ about.html
             <img src="images/Rafting2.jpg" alt="Hero background image" width="200">
             <h1>WHITE WATER RAFTING</h1>
             <article>
-                <img src="images/Rafting3.jpg" alt="Happy Client">
+                <img src="images/Happy client.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
