picture sizes reduced

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -81,12 +81,10 @@ about.html
     <footer>
         <p>©2025 <a href="about.html">White Water Rafting</a> Sarah Owen </p>
         <nav class="sociallinks">
-            <a href="https://facebook.com" target="_blank"><img src="images/Facebook icon.png"
-                    alt="Facebook icon"></a>
-            <a href="https://twitter.com" target="_blank"><img src="images/Twitter icon.png"
-                    alt="Twitter(X) icon"></a>
+            <a href="https://facebook.com" target="_blank"><img src="images/Facebook icon.png" alt="Facebook icon"></a>
+            <a href="https://twitter.com" target="_blank"><img src="images/Twitter icon.png" alt="Twitter(X) icon"></a>
             <a href="https://instagram.com" target="_blank"><img src="images/Instagram icon.jpg"
-                    alt="LinkedIn icon"></a>
+                    alt="Instagram icon"></a>
         </nav>
     </footer>
 </body>
