--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@ about.html
     </header>
     <main>
         <div class="hero">
-            <img src="images/Rafting2.jpg" alt="Hero background image" width="200">
+            <img src="images/Rafting2.jpg" alt="Rafting activity background image" width="200">
             <h1>WHITE WATER RAFTING</h1>
             <article>
                 <img src="images/Happy client.jpg" alt="Happy Client">
@@ -44,7 +44,7 @@ about.html
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="images/Rafting4.jpg" alt="History Image">
+                <img src="images/Rafting4.jpg" alt="Image of Rafting">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
