--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,4 +1,3 @@
-about.html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +7,7 @@ about.html
     <title>White Water Rafting | About Us</title>
     <meta name="description"
         content="This About Us page provides information on contacts, history, and promotions for our rafting site.">
-    <meta name="author" content="Sarah Owen">
+    <meta name="author" content="Sarah Ekpo Owen">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
