renaming image files

--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting | Contact Us</title>
-    <meta name="description" content="Get in touch with our team for thrilling rafting adventures! Contact us now for inquiries, bookings, and personalized trip details.">
-    <meta name="author" content="Sarah Owen">
+    <meta name="description"
+        content="Get in touch with our team for thrilling rafting adventures! Contact us now for inquiries, bookings, and personalized trip details.">
+    <meta name="author" content="Sarah Ekpo Owen">
     <link href="styles/rafting.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <img src="images/skelletons.jpg" alt="Rafting Site Logo" width="200">
+        <img src="images/rafting1.jpg" alt="Rafting Site Logo" width="200">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -30,8 +33,8 @@
                     <h4>TALK TO SALES</h4>
                     <p>Chat with our sales team to discover how our product can work best for you.</p>
                     <div class="fone">
-                        <img src="images/phone-100.png" alt="sales contact" width="20">
-                        <p>+234 702 511 0560 </p>
+                        <img src="images/happyclient.png" alt="sales contact" width="20">
+                        <p>+2349052699620 </p>
                     </div>
                 </div>
                 <div>
@@ -51,28 +54,32 @@
                 <p>Phone: +2349052699620</p>
                 <p>Email: owensarah049@gmail.com </p>
                 <nav class="sociallinks">
-                    <a href="https://facebook.com" target="_blank"><img src="images/facebook-600.png" alt="Facebook icon by Icons8.com" width="30"></a>
-                    <a href="https://twitter.com" target="_blank"><img src="images/twitterx-600.png" alt="Twitter(X) icon by Icons8.com" width="30"></a>
+                    <a href="https://facebook.com" target="_blank"><img src="images/facebookicon.png"
+                            alt="Facebook icon" width="30"></a>
+                    <a href="https://twitter.com" target="_blank"><img src="images/twittericon.png"
+                            alt="Twitter(X) icon" width="30"></a>
                 </nav>
             </div>
 
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31703.98655620147!2d3.3546170159677655!3d6.6471280518544775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9381601e96b5%3A0x8d79a42c1c6bb9d4!2sOjodu%20Berger%2C%20Lagos!5e0!3m2!1sen!2sng!4v1730122826903!5m2!1sen!2sng" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31703.98655620147!2d3.3546170159677655!3d6.6471280518544775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9381601e96b5%3A0x8d79a42c1c6bb9d4!2sOjodu%20Berger%2C%20Lagos!5e0!3m2!1sen!2sng!4v1730122826903!5m2!1sen!2sng"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
 
         <section class="employee-profiles">
             <h3>Meet Our Team</h3>
             <div>
-                <img src="images/WhatsApp Image 2024-10-31 at 14.51.45_47a4ac8a.jpg" alt="CEO" width="350" height="400">
-                <img src="images/david.jpg" alt="Operations Manager" width="350" height="400">
-                <img src="images/team-member2.jpg" alt="Tour Guide" width="350" height="400">
-                <h5>Adebiyi Ademola<br>Chief Executive officer</h5>
-                <h5>David Ugochukwu<br>Operations Manager</h5>
-                <h5>Sarah Ekpo<br>Tour Guide</h5>
-            </div>  
+                <img src="images/" alt="CEO" width="350" height="400">
+                <img src="images/" alt="Operations Manager" width="350" height="400">
+                <img src="images/" alt="Tour Guide" width="350" height="400">
+                <h5>Sarah Ekpo Owen<br>Chief Executive officer</h5>
+                <h5>Ademola Adebiyi<br>Operations Manager</h5>
+                <h5>Priest Owen<br>Tour Guide</h5>
+            </div>
         </section>
 
         <form action="#" method="get">
@@ -106,11 +113,13 @@
 
     </main>
     <footer>
-        <p>©2024  〽️👑 <a href="contact.html">White Water Rafting</a>  〽️👑 Adebiyi Ademola  〽️👑 <a class="wireframe" href="images/Contact-us-page-wireframe.png" target="_blank">Contact Us wireframe</a></p>
+        <p>©2025 <a href="contact.html">White Water Rafting</a> Sarah Ekpo Owen <a class="wireframe"
+                href="images/Contact-us-page-wireframe.png" target="_blank">Contact Us wireframe</a></p>
         <nav class="sociallinks">
-            <a href="https://facebook.com" target="_blank"><img src="images/facebook-600.png" alt="Facebook icon by Icons8.com"></a>
-            <a href="https://twitter.com" target="_blank"><img src="images/twitterx-600.png" alt="Twitter(X) icon by Icons8.com"></a>
+            <a href="https://facebook.com" target="_blank"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+            <a href="https://twitter.com" target="_blank"><img src="images/twittericon.png" alt="Twitter(X) icon"></a>
         </nav>
     </footer>
 </body>
+
 </html>
