renaming image files

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="images/Rafting1.jpg" alt="Rafting Site Logo">
+        <img src="images/rafting1.jpg" alt="Rafting Site Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -23,10 +23,10 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/Rafting2.jpg" alt="Rafting activity background image" width="200">
+            <img src="images/rafting2.jpg" alt="Rafting activity background image" width="200">
             <h1>WHITE WATER RAFTING</h1>
             <article>
-                <img src="images/Happy client.jpg" alt="Happy Client">
+                <img src="images/happyclient.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -43,7 +43,7 @@
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="images/Rafting4.jpg" alt="Image of Rafting">
+                <img src="images/rafting4.jpg" alt="Image of Rafting">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -55,23 +55,23 @@
             <h2>ADVENTURE AWAITS YOU!</h2>
             <div class="fig-images">
                 <figure>
-                    <img src="images/Rafting1.jpg" alt="White Water Adventure">
+                    <img src="images/rafting1.jpg" alt="White Water Adventure">
                     <figcaption>Preparation</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Rafting2.jpg" alt="White Water Adventure">
+                    <img src="images/rafting2.jpg" alt="White Water Adventure">
                     <figcaption>Journey Begin</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Rafting3.jpg" alt="White Water Adventure">
+                    <img src="images/rafting3.jpg" alt="White Water Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Rafting4.jpg" alt="White Water Adventure">
+                    <img src="images/rafting4.jpg" alt="White Water Adventure">
                     <figcaption>Rolling Rapids</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Rafting5.jpg" alt="White Water Adventure">
+                    <img src="images/rafting5.jpg" alt="White Water Adventure">
                     <figcaption>wind</figcaption>
                 </figure>
             </div>
@@ -80,9 +80,9 @@
     <footer>
         <p>©2025 <a href="about.html">White Water Rafting</a> Sarah Owen </p>
         <nav class="sociallinks">
-            <a href="https://facebook.com" target="_blank"><img src="images/Facebook icon.png" alt="Facebook icon"></a>
-            <a href="https://twitter.com" target="_blank"><img src="images/Twitter icon.png" alt="Twitter(X) icon"></a>
-            <a href="https://instagram.com" target="_blank"><img src="images/Instagram icon.jpg"
+            <a href="https://facebook.com" target="_blank"><img src="images/facebookicon.png" alt="Facebook icon"></a>
+            <a href="https://twitter.com" target="_blank"><img src="images/twittericon.png" alt="Twitter(X) icon"></a>
+            <a href="https://instagram.com" target="_blank"><img src="images/instagramicon.jpg"
                     alt="Instagram icon"></a>
         </nav>
     </footer>
