Fulfilling the google fonts requirements

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,9 @@
         content="This About Us page provides information on contacts, history, and promotions for our rafting site.">
     <meta name="author" content="Sarah Ekpo Owen">
     <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
