--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             </div>
 
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31703.98655620147!2d3.3546170159677655!3d6.6471280518544775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9381601e96b5%3A0x8d79a42c1c6bb9d4!2sOjodu%20Berger%2C%20Lagos!5e0!3m2!1sen!2sng!4v1730122826903!5m2!1sen!2sng"
+                src="https://www.google.com/maps/place/Lawanson+Market/@6.5130215,3.3483633,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8e9da44a5cc1:0xac5ba98fa97a90b1!8m2!3d6.5130215!4d3.3509382!16s%2Fg%2F11g6xm54c_?hl=en&entry=ttu&g_ep=EgoyMDI1MDcyOC4wIKXMDSoASAFQAw%3D%3D"
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
