--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,7 +33,7 @@
                     <h4>TALK TO SALES</h4>
                     <p>Chat with our sales team to discover how our product can work best for you.</p>
                     <div class="fone">
-                        <img src="images/happyclient.png" alt="sales contact" width="20">
+                        <img src="images/happyclient.jpg" alt="sales contact" width="20">
                         <p>+2349052699620 </p>
                     </div>
                 </div>
@@ -73,9 +73,9 @@
         <section class="employee-profiles">
             <h3>Meet Our Team</h3>
             <div>
-                <img src="images/" alt="CEO" width="350" height="400">
-                <img src="images/" alt="Operations Manager" width="350" height="400">
-                <img src="images/" alt="Tour Guide" width="350" height="400">
+                <img src="images/rafting2.jpg" alt="CEO" width="350" height="400">
+                <img src="images/rafting3.jpg" alt="Operations Manager" width="350" height="400">
+                <img src="images/rafting4.jpg" alt="Tour Guide" width="350" height="400">
                 <h5>Sarah Ekpo Owen<br>Chief Executive officer</h5>
                 <h5>Ademola Adebiyi<br>Operations Manager</h5>
                 <h5>Priest Owen<br>Tour Guide</h5>
@@ -114,7 +114,7 @@
     </main>
     <footer>
         <p>©2025 <a href="contact.html">White Water Rafting</a> Sarah Ekpo Owen <a class="wireframe"
-                href="images/Contact-us-page-wireframe.png" target="_blank">Contact Us wireframe</a></p>
+                href="images/rafting5.jpg" target="_blank">Contact Us wireframe</a></p>
         <nav class="sociallinks">
             <a href="https://facebook.com" target="_blank"><img src="images/facebookicon.png" alt="Facebook icon"></a>
             <a href="https://twitter.com" target="_blank"><img src="images/twittericon.png" alt="Twitter(X) icon"></a>
