--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -73,9 +73,9 @@
         <section class="employee-profiles">
             <h3>Meet Our Team</h3>
             <div>
-                <img src="images/sarah.jpg" alt="CEO" width="350" height="400">
-                <img src="images/demola.jpg" alt="Operations Manager" width="350" height="400">
-                <img src="images/sarah2.jpg" alt="Tour Guide" width="350" height="400">
+                <img src="images/rafting2.jpg" alt="CEO" width="350" height="400">
+                <img src="images/rafting3.jpg" alt="Operations Manager" width="350" height="400">
+                <img src="images/rafting4.jpg" alt="Tour Guide" width="350" height="400">
                 <h5>Sarah Ekpo Owen<br>Chief Executive officer</h5>
                 <h5>Ademola Adebiyi<br>Operations Manager</h5>
                 <h5>Priest Owen<br>Tour Guide</h5>
