--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -63,7 +63,7 @@
 
             <iframe
                 src="https://www.google.com/maps/place/Lawanson+Market/@6.5130215,3.3483633,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8e9da44a5cc1:0xac5ba98fa97a90b1!8m2!3d6.5130215!4d3.3509382!16s%2Fg%2F11g6xm54c_?hl=en&entry=ttu&g_ep=EgoyMDI1MDcyOC4wIKXMDSoASAFQAw%3D%3D"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
@@ -73,7 +73,7 @@
         <section class="employee-profiles">
             <h3>Meet Our Team</h3>
             <div>
-                <img src="images/rafting2.jpg" alt="CEO" width="350" height="400">
+                <img src="images/rafting2.jpg" alt="Chief Executive Officer" width="350" height="400">
                 <img src="images/rafting3.jpg" alt="Operations Manager" width="350" height="400">
                 <img src="images/rafting4.jpg" alt="Tour Guide" width="350" height="400">
                 <h5>Sarah Ekpo Owen<br>Chief Executive officer</h5>
