--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -59,15 +59,14 @@
                     <a href="https://twitter.com" target="_blank"><img src="images/twittericon.png"
                             alt="Twitter(X) icon" width="30"></a>
                 </nav>
-            </div>
+            
 
-            <iframe
-                src="https://www.google.com/maps/place/Lawanson+Market/@6.5130215,3.3483633,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8e9da44a5cc1:0xac5ba98fa97a90b1!8m2!3d6.5130215!4d3.3509382!16s%2Fg%2F11g6xm54c_?hl=en&entry=ttu&g_ep=EgoyMDI1MDcyOC4wIKXMDSoASAFQAw%3D%3D"
-                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            <iframe src="https://www.google.com/maps/place/Lawanson+Market/@6.5130215,3.3483633,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8e9da44a5cc1:0xac5ba98fa97a90b1!8m2!3d6.5130215!4d3.3509382!16s%2Fg%2F11g6xm54c_?hl=en&entry=ttu&g_ep=EgoyMDI1MDcyOC4wIKXMDSoASAFQAw%3D%3D"
+                width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            </div>
         </section>
 
         <section class="employee-profiles">
