--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,8 +61,7 @@
                 </nav>
             </div>
 
-            <div style="width: 100%; height: 300px; overflow: hidden;">
-
+            <div>
                 <iframe src="https://www.google.com/maps/place/Lawanson+Market/@6.5130215,3.3483633,17z/data=!3m1!4b1!4m6!3m5!1s0x103b8e9da44a5cc1:0xac5ba98fa97a90b1!8m2!3d6.5130215!4d3.3509382!16s%2Fg%2F11g6xm54c_?hl=en&entry=ttu&g_ep=EgoyMDI1MDcyOC4wIKXMDSoASAFQAw%3D%3D"
                 width="800" height="450" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
