meeting final project requirements

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -111,7 +111,8 @@
 
     </main>
     <footer>
-        <p>©2025 <a href="contact.html">White Water Rafting</a> Sarah Ekpo Owen <a class="wireframe"
+        <p>©2025  ❤ <a href="contact.html">White Water Rafting</a> ❤ Sarah Ekpo Owen ❤ <a class="wireframe" href="images/Contact-page-wireframe.png" target="_blank">Contact Page wireframe</a></p>
+
                 href="images/rafting5.jpg" target="_blank">Contact Us wireframe</a></p>
         <nav class="sociallinks">
             <a href="https://facebook.com" target="_blank"><img src="images/facebookicon.png" alt="Facebook icon"></a>
